Fix title spacing

--- a/style.css
+++ b/style.css
@@ -759,6 +759,10 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-\[0\.375rem\] {
+  margin-top: 0.375rem;
+}
+
 .block {
   display: block;
 }
